Replace deprecated constructor with static method